# playlist-maker

./: README.md  flac_convert.sh  index.html  package.json  playlist_config.yaml  playlist_generator.py  sample_config.yaml  sanitizer.py
archive/python/: playlist_generator.py  requirements.txt
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: downloader.rs  export.rs  lib.rs  library.rs  main.rs  playlist.rs  sanitizer.rs  transcoder.rs  utils.rs  watcher.rs
src/components/: AudioPlayer.tsx  ResolvedTracksPanel.tsx  Sidebar.tsx
src/components/common/: ConfirmModal.tsx  ProgressBar.tsx
src/types/: index.ts
src/utils/: formatters.ts
src/views/: DownloadsView.tsx  ExportView.tsx  LibraryView.tsx  PlaylistView.tsx  SanitizerView.tsx  SettingsView.tsx  ToolsView.tsx  TranscoderView.tsx  WorkspaceView.tsx
