[package]
name = "diamond-music-manager"
version = "0.1.0"
description = "Diamond Music Manager"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "diamond_music_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2.5"
lofty = "0.19"
claxon = "0.4"
shine-rs = "0.1"
pathdiff = "0.2"
regex = "1"
tokio = { version = "1", features = ["full"] }
rfd = "0.14"
base64 = "0.22"
notify = "6.1.1"

